err/presto-docker-devenv.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/devenv'...
Listing './lib/python3.5/site-packages/devenv/common'...
Compiling './lib/python3.5/site-packages/devenv/common/cluster.py'...
***   File "./lib/python3.5/site-packages/devenv/common/cluster.py", line 91
    print 'Building docker image %s' % tag
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devenv/devenv.py'...
***   File "./lib/python3.5/site-packages/devenv/devenv.py", line 86
    print "Version of Presto docker developer environment: %s" % version
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/devenv/local_network_bridge.py'...
***   File "./lib/python3.5/site-packages/devenv/local_network_bridge.py", line 18
    print 'Adding bridge %s with address %s' % (NETWORK_BRIDGE_NAME, NETWORK_BRIDGE_ADDR)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/devenv/presto_build.py'...
***   File "./lib/python3.5/site-packages/devenv/presto_build.py", line 113
    print 'Skipping building Presto'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/auth'...
Listing './lib/python3.5/site-packages/docker/ssladapter'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker/utils/ports'...
Listing './lib/python3.5/site-packages/docker_py-1.10.6.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/images'...
Listing './lib/python3.5/site-packages/images/boot2docker'...
Listing './lib/python3.5/site-packages/images/boot2docker/.vagrant'...
Listing './lib/python3.5/site-packages/images/boot2docker/.vagrant/machines'...
Listing './lib/python3.5/site-packages/images/boot2docker/.vagrant/machines/boot2docker'...
Listing './lib/python3.5/site-packages/images/boot2docker/.vagrant/machines/boot2docker/virtualbox'...
Listing './lib/python3.5/site-packages/images/cdh5-base'...
Listing './lib/python3.5/site-packages/images/cdh5-hive'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/.vagrant'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/.vagrant/machines'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/.vagrant/machines/default'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/.vagrant/machines/default/docker'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/files'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/files/conf'...
Listing './lib/python3.5/site-packages/images/cdh5-hive/files/supervisord.d'...
Listing './lib/python3.5/site-packages/images/centos6-java8-oracle'...
Listing './lib/python3.5/site-packages/images/centos6-ssh'...
Listing './lib/python3.5/site-packages/images/presto-local'...
Listing './lib/python3.5/site-packages/images/presto-local/example_configs'...
Listing './lib/python3.5/site-packages/images/presto-local/example_configs/master'...
Listing './lib/python3.5/site-packages/images/presto-local/example_configs/master/catalog'...
Listing './lib/python3.5/site-packages/images/presto-local/example_configs/worker'...
Listing './lib/python3.5/site-packages/images/presto-local/example_configs/worker/catalog'...
Listing './lib/python3.5/site-packages/images/presto-local/files'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/presto_docker_devenv-0.2.dist-info'...
Listing './lib/python3.5/site-packages/python_vagrant-0.5.15.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vagrant'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
